Added Newtonsoft.Json package.
Introduced Credentials class plus repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-[Oo]bj
-[Bb]in
-deploy
-deploy/*
-*.csproj.user
-*.suo
+.DS_Store
+bin/
+obj/
+deploy/
+unversioned/
+*.user
 *.cache
-TestResults/
+*.suo
+*.userprefs
+*ReSharper*
+test-results/
+*.ncrunchsolution
+*.ncrunchsolution.user
+*.DotSettings.user
+*.fbl7
+*.fbpInf
+*.fb7lck
+*.CacheTestResults
