--- a/iron_mq_testing/iron_mq_testing.csproj
+++ b/iron_mq_testing/iron_mq_testing.csproj
@@ -65,6 +65,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\unversioned\ironmq.credentials.txt">
+      <Link>ironmq.credentials.txt</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
