Renamed API methods to upper case; that more like .NET.
Refactored out basic REST functionality into its own class.
Class Queue can now only be instanciated by Client; that should improve consistency.
Renamed Get/Push to Dequeue/Enqueue on Queue.

--- a/iron_mq_dotnet/iron_mq_dotnet.csproj
+++ b/iron_mq_dotnet/iron_mq_dotnet.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Queue.cs" />
     <Compile Include="Credentials.cs" />
     <Compile Include="CredentialsRepository.cs" />
+    <Compile Include="RESTadapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Extensions\" />
