--- a/iron_mq_testing/iron_mq_testing.csproj
+++ b/iron_mq_testing/iron_mq_testing.csproj
@@ -70,6 +70,7 @@
       <Link>ironmq.credentials.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ironmq.credentials template.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
