Switched to NUnit

--- a/iron_mq_dotnet/iron_mq_dotnet.csproj
+++ b/iron_mq_dotnet/iron_mq_dotnet.csproj
@@ -10,7 +10,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>io.iron.ironmq</RootNamespace>
     <AssemblyName>iron_mq_dotnet</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
@@ -58,9 +57,7 @@
     <Compile Include="CredentialsRepository.cs" />
     <Compile Include="RESTadapter.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
